x.y.z
=====

Release date:

New features:

* Add default settings for arrow size and edge width

Bug fixes:

* Fix node left selected on canceled node/text color dialog

Other

3.6.4
=====

Release date:

Mon, 19 Dec 2022 19:49:40 -0000

Bug fixes:

* Fix crash when trying to copy a group of connected nodes

Other

* Update Italian translations

3.6.3
=====

Release date:

Sun, 11 Dec 2022 18:28:24 -0000

New features:

* Fix GitHub Issue #229: Add option to automatically open the last used file on application start
  - Autoload can be now enabled in edit settings

* Implement asynchronous file save for autosave
  - Fixes stuttering user experience on large files

Bug fixes:

* Fix Heimer Snap on Ubuntu 22.04
  - Didn't launch due to Wayland issues
  - Forced to X11 for now

Other:

* Initialize a new mind map to avoid an undefined state if the mind map fails to load

* Apply autosave only when settings dialog is accepted

* Increase edge with step to 0.25

* Update Dutch and Italian translations

3.6.2
=====

Release date:

Fri, 11 Nov 2022 16:22:10 -0000

New features:

* Add tooltips to node handles

* Set handle background color based on node color

* Light or dark text edit highlight based on node color

Bug fixes:

* Fix GitHub issue #224: Tests fail when compiled with UBSan

* Fix GitHub Issue #226: Attached node background images not loading    
  - Decode images in memory without exporting into a file first

Other:

* Add timestamp to log file name

* Save immediately when autosave enabled

3.6.1
=====

Release date:

Wed, 21 Sep 2022 18:26:35 -0000

Bug fixes:

* Fix shadow effect of edge label when edge is selected

* Fix edge label not deleted together with the edge

* Fix edge context menu not opening when edge text edit right-clicked

Other:

* constants.hpp: added <qreal> to QVector so that the compiler wouldn't throw an error

3.6.0
=====

Release date:

Sat, 27 Aug 2022 19:03:46 +0300

New features:

* Usability improvements: