@@ -7,6 +7,8 @@ New features:
 
 * Add default settings for arrow size and edge width
 
+* Add default settings for text size and font
+
 Bug fixes:
 
 * Fix node left selected on canceled node/text color dialog
